--- a/app/src/main/res/layout/activity_add_ledger.xml
+++ b/app/src/main/res/layout/activity_add_ledger.xml
@@ -40,18 +40,6 @@
         android:paddingRight="10dp" />
 
     <EditText
-        android:id="@+id/ledger_edt_address"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/rectangle_white"
-        android:hint="Loaction of land"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp" />
-
-    <EditText
         android:id="@+id/ledger_edt_crop"
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -71,9 +59,10 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/rectangle_white"
-        android:hint="Area to be sown"
+        android:hint="Area to be sown (in Hectare)"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp" />
+        android:paddingRight="10dp"
+        android:inputType="numberDecimal"/>
 
     <Button
         android:id="@+id/ledger_btn_add"
